--- a/GolfTournamentAPI/appsettings.json
+++ b/GolfTournamentAPI/appsettings.json
@@ -4,7 +4,7 @@
     "Issuer": "GolfTournamentAPI"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DANNYSXPS\\SQLEXPRESS;Database=GolfTournament;Trusted_Connection=true;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=DEVELOP-07\\MSSQLSERVER02;uid=truenorth;pwd=Pm?8Ui)KQYFYB3;Database=GolfTournament;TrustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
