--- a/GolfTournamentAPI/publish/appsettings.json
+++ b/GolfTournamentAPI/publish/appsettings.json
@@ -4,11 +4,11 @@
     "Issuer": "GolfTournamentAPI"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DANNYSXPS\\SOLEXPRESS01;Database=GolfTournament_Prod;Integrated Security=true;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=DEVELOP-07\\MSSQLSERVER02;uid=truenorth;pwd=Pm?8Ui)KQYFYB3;Database=GolfTournament;TrustServerCertificate=true;Encrypt=false;"
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Information", 
+      "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
